# student-mental-health-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: agent.py  app.py  predict.py
frontend/: app.js  index.html  style.css
models/: best_model.pkl  feature_names.pkl  scaler.pkl  shap_background.npy
notebooks/: eda.ipynb  model_training.ipynb  preprocessing.ipynb
